# QueryMind

./: .env.example  .gitignore  Dockerfile.backend  Makefile  docker-compose.yml  pyproject.toml
backend/agents/: critic_agent.py  dashboard_agent.py  day1_react.py  execution_agent.py  insight_extractor.py  intent_classifier.py  orchestrator.py  query_validator.py  schema_navigator.py  sql_agent.py  sql_architect.py  state.py
backend/api/: main.py
backend/api/routers/: chat.py  health.py  query.py  sources.py
backend/connectors/: __init__.py  base.py  bigquery.py  duckdb_file.py  mongodb.py  postgresql.py  snowflake.py
backend/core/: config.py  database.py  qdrant_client.py  redis_client.py
backend/mcp/: bi_server.py  slack_server.py
backend/memory/: checkpointer.py  long_term.py
backend/observability/: langfuse_client.py  prometheus.py
backend/schema_registry/: embeddings.py  models.py
backend/security/: encryption.py
docs/: architecture.md  eval_report.md
frontend/src/: App.jsx
frontend/src/components/DashboardPanel/: DashboardPanel.jsx
infra/helm/querymind/templates/: deployment-backend.yaml  deployment-frontend.yaml
infra/nginx/: nginx.conf
infra/prometheus/: prom.yml
